# cgui

./: CMakeLists.txt  README.md  main.c
.github/workflows/: main.yml
include/cgui/: prelude.h
include/cgui/app/: application.c  application.h
include/cgui/component/: trait.h  ui.c  ui.h  ui_button.c  ui_button.h  ui_factory.c  ui_factory.h  ui_label.c  ui_label.h  ui_list.c  ui_list.h  ui_textbox.c  ui_textbox.h  ui_window.c  ui_window.h
include/cgui/event/: args.c  args.h  handler.c  handler.h
include/cgui/geo/: layout.c
include/cgui/threading/: lock.c  lock.h  thread.c  thread.h  threadpool.c  threadpool.h
include/cgui/util/: common.c  common.h  error.h  error_msg.h  hashmap.c  hashmap.h  misc.c  misc.h  obsolete.c  obsolete.h  vector.c  vector.h
include/cgui/win32/: gdi.c  gdi.h  message.c  message.h  window.c  window.h
src/: main_window.h  resources.h
